# ironshield-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README-crates.md  README.md  debug_log.txt  docker-compose.yml  fly.toml
.cargo/: config.toml
.github/workflows/: bump-and-publish.yml  ironshield-api-ci-cd.yml
src/: constant.rs  lib.rs  main.rs  routing.rs
src/handler/: error.rs  health.rs  mod.rs  request.rs  request_handler.rs  response.rs  response_handler.rs  result.rs
src/test/: endpoint.rs
