[package]
name = "ironshield-api"
version = "0.1.59"
edition = "2021"
authors = [ "IronShield Developers <software@ironshield.cloud>" ]
description = " IronShield Web Server API, Built with Axum "
repository = "https://github.com/IronShield-Tech/ironshield-api"
license = "SSPL-1.0"
readme = "README-crates.md"
keywords = ["api"]
categories = ["web-programming"]

[[bin]]
name = "ironshield-api"
path = "src/main.rs"

[lib]
name = "ironshield_api"
path = "src/lib.rs"

[dependencies]
ironshield-core = { version = "0.3", features = ["parallel"] }
ironshield-types = { version = "0.2"}
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
serde_json = "1.0.140"
chrono = "0.4.41"
hex = "0.4.3"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
rand_core = "0.9.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22.1"
reqwest = "0.12.22"
