[package]
name = "ironshield-api"
version = "0.2.20"
edition = "2021"
authors = [ "IronShield Developers <software@ironshield.cloud>" ]
description = " IronShield Web Server API, Built with Axum "
repository = "https://github.com/IronShield-Tech/api"
license = "SSPL-1.0"
readme = "README-crates.md"
keywords = ["api"]
categories = ["web-programming"]

[[bin]]
name = "ironshield-api"
path = "src/main.rs"

[lib]
name = "ironshield_api"
path = "src/lib.rs"

[dependencies]
ironshield = { version = "0.2", path = "../ironshield-rs" }
ironshield-core = { version = "0.3", path = "../core" }
ironshield-types = { version = "0.2", path = "../types", features = ["openapi"] }
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
chrono = "0.4.41"
hex = "0.4.3"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
